[package]
name = "classic-sync"
version = "0.4.3"
edition = "2021"
license = "Apache-2.0"
description = "Provides ReentrantLock, Semaphore and CyclicBarrier using Classic Linux Mutex systems"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
libc = "0.2.0"

[build-dependencies]
cc = "1.0.82"